gcc/testsuite/rust/rustc/ui/issues/issue-6458-2.rs
fn main() {
    // Unconstrained type:
    format!("{:?}", None);
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

